--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+
+<body class="body">
+		<header class="mainheader">
+			<img src="">
+		
+		<nav>
+		<ul>
+			<li><a href="">Home</li>
+			<li><a href="">Reservations</li>
+			<li><a href="">Offers</li>
+			<li><a href="">Location</li>
+		</ul>
+		</nav>
+		</header>
+			
 </body>
 </html>
