--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<title>Hotel Citats</title>
 	<meta charset="utf-8">
 	
-	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body class="body">
-		<header class="mainheader">
+		<header class="mainHeader">
 			<img src="">
 		
 		<nav>
 		<ul>
-			<li><a href="">Home</li>
+			<li class="active"><a href="">Home</li>
 			<li><a href="">Reservations</li>
 			<li><a href="">Offers</li>
 			<li><a href="">Location</li>
@@ -61,4 +61,3 @@
 				</footer>
 </body>
 </html>
-		
