--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-   <header></header>
 
+<body>
+    <header id="slider">
+        <p>Here is a section of our photos..
+            <br>Feel free to go through them</p>
+    </header>
+    <div>
+        <p> dgghjdsbfhjdsbhfjdbkjfkjlokjjjklkkj</p>
+    </div>
+    <div class="images">
+        <img src="images/use1.jpg">
+        <img src="images/use1.jpg">
+        <img src="images/useeeee.jpg">
+        <img src="images/24.jpg">
+        <img src="images/28.jpg">
+        <img src="images/23.jpg">
+        <img src="images/25.jpg">
+        <img src="images/6.jpg">
+        <img src="images/36.jpg">
+        <img src="images/4.jpg">
+        <img src="images/57.jpg">
+        <img src="images/35.jpg">
+    </div>
     <script src="js/mitch.js"></script>
 </body>
+
 </html>
